overflow issue fixed

--- a/assets/style.css
+++ b/assets/style.css
@@ -215,7 +215,7 @@ nav .hamburger .bar {
 }
 /* contact */
 .contact {
-  width: 400px;
+  width: 90%;
   margin: 50px auto;
   display: flex;
   flex-direction: column;
@@ -268,7 +268,9 @@ footer {
   justify-content: center;
   align-items: center;
 }
-
+footer p {
+  font-size: 15px;
+}
 @media (min-width: 768px) {
   nav ul {
     position: static;
